db 누락 수정